# backgammon

src/: CMakeLists.txt  Makefile  game.cpp  game.h  main.cpp
src/common/: Makefile  board.cpp  board.h  defaultdie.cpp  exceptions.h  game.cpp  game.h  randomplayer.cpp  randomplayer.h
src/display/: CMakeLists.txt  display.h  streamdisplay.h  terminaldisplay.cpp  terminaldisplay.h
src/zeno_common/: CMakeLists.txt  board.cpp  board.h  board.hxx  defaultdie.cpp  defaultdie.h  die.cpp  die.h  evaluation.cpp  evaluation.h  exceptions.h  game.cpp  game.h  gamestate.cpp  gamestate.h  gamestate.hxx  gametype.h  hittingrandomplayer.cpp  hittingrandomplayer.h  player.h  randomplayer.cpp  randomplayer.h
src/zeno_test/: CMakeLists.txt  checkertests.h  zenotest.cpp
